[project]
name = "webhook-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-login>=0.6.3",
    "flask-pymongo>=3.0.1",
    "pymongo>=4.16.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
]
